--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 
 <head>
 	<meta charset="utf-8" />
+	<base href="https://buggem.github.io/GN9/" />
+	<!-- Load p5.js and the p5.sound library -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/p5.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/addons/p5.sound.min.js"></script>
-	<script src="src/main.js"></script>
+	<script src="/src/main.js"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>GN9</title>
   
 </head>
 
 <body>   
-	
+	<!-- p5.js canvas will load here -->
 </body>
 
 </html>
