--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 
 <head>
 	<meta charset="utf-8" />
+	<meta property="og:title" content="GN9 - a work in progress videogame" />
+	<meta property="og:type" content="website" />
+	<meta property="og:image" content="https://buggem.github.io/GN9/src/assets/lang/en/logo.png" />
+	<meta property="og:url" content="https://buggem.github.io/GN9/" />
+
 	<base href="https://buggem.github.io/GN9/" />
 	<!-- Load p5.js and the p5.sound library -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/p5.js"></script>
